--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -25,7 +25,7 @@ tile.rustic.dark_oak.stool.name=Dark Oak Stool
 tile.rustic.crimson.stool.name=Crimson Stool
 tile.rustic.warped.stool.name=Warped Stool
 
-tile.rustic.books.name=Books
+tile.rustic.book.name=Book
 
 tile.rustic.radio.name=Radio
 
