✨ Add rustic step ladder

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -41,6 +41,8 @@ tile.rustic.vase.name=Vase
 
 tile.rustic.curtain.name=Curtain
 
+tile.rustic.step_ladder.name=Step Ladder
+
 
 ## Entities
 entity.furnideco:seat.name=Seat
