✨ Rustic plant pot now drops an item upon removing a plant

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -50,6 +50,7 @@ tile.rustic.grandfather_clock.name=Grandfather Clock
 
 ## Entities
 entity.furnideco:seat.name=Seat
+entity.furnideco:spawn_item.name=Spawn Item
 
 
 ## Interactions
