✨ Add rustic ceiling fan

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -47,6 +47,8 @@ tile.rustic.plant_pot.name=Plant Pot
 
 tile.rustic.grandfather_clock.name=Grandfather Clock
 
+tile.rustic.ceiling_fan.name=Ceiling Fan
+
 
 ## Entities
 entity.furnideco:seat.name=Seat
