✨ Add rustic chandelier

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -36,6 +36,7 @@ tile.rustic.plant_pot.name=Plant Pot
 tile.rustic.grandfather_clock.name=Grandfather Clock
 tile.rustic.ceiling_fan.name=Ceiling Fan
 tile.rustic.mounted_goat_horn.name=Mounted Goat Horn
+tile.rustic.chandelier.name=Chandelier
 
 
 ## Entities
