✨ Add rustic shelve

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -37,6 +37,7 @@ tile.rustic.grandfather_clock.name=Grandfather Clock
 tile.rustic.ceiling_fan.name=Ceiling Fan
 tile.rustic.mounted_goat_horn.name=Mounted Goat Horn
 tile.rustic.chandelier.name=Chandelier
+tile.rustic.shelve.name=Shelve
 
 
 ## Entities
