✨ Add rustic tv

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -54,6 +54,7 @@ tile.rustic.acacia.chair.name=Acacia Chair
 tile.rustic.dark_oak.chair.name=Dark Oak Chair
 tile.rustic.crimson.chair.name=Crimson Chair
 tile.rustic.warped.chair.name=Warped Chair
+tile.rustic.tv.name=TV
 
 
 ## Entities
