:sparkles: Add rustic scroll

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -79,6 +79,7 @@ tile.rustic.acacia.sofa.name=Acacia Sofa
 tile.rustic.dark_oak.sofa.name=Dark Oak Sofa
 tile.rustic.crimson.sofa.name=Crimson Sofa
 tile.rustic.warped.sofa.name=Warped Sofa
+tile.rustic.scroll.name=Scroll
 
 
 ## Entities
