:sparkles: Add rustic fire pit

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -80,6 +80,7 @@ tile.rustic.dark_oak.sofa.name=Dark Oak Sofa
 tile.rustic.crimson.sofa.name=Crimson Sofa
 tile.rustic.warped.sofa.name=Warped Sofa
 tile.rustic.scroll.name=Scroll
+tile.rustic.fire_pit.name=Fire Pit
 
 
 ## Entities
