:truck: Rename rustic tv to rustic television

--- a/RP/texts/en_US.lang
+++ b/RP/texts/en_US.lang
@@ -56,7 +56,7 @@ tile.rustic.acacia.chair.name=Acacia Chair
 tile.rustic.dark_oak.chair.name=Dark Oak Chair
 tile.rustic.crimson.chair.name=Crimson Chair
 tile.rustic.warped.chair.name=Warped Chair
-tile.rustic.tv.name=TV
+tile.rustic.television.name=Television
 tile.rustic.oak.coffee_table.name=Oak Coffee Table
 tile.rustic.spruce.coffee_table.name=Spruce Coffee Table
 tile.rustic.birch.coffee_table.name=Birch Coffee Table
